# ecal

My_Working_Opencv_Protobuf/: CMakeLists.txt  deserialization.cpp  image.pb.cc  image.proto  serialization.cpp
